<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.mosip.commons</groupId>
    <artifactId>commons-packet</artifactId>
    <version>MOSIP-11739</version>
    <name>common-packet</name>
    <description>Common packet manager for MOSIP</description>
    <url>https://github.com/mosip/commons</url>
    
    <packaging>pom</packaging>

    <properties>
        <!-- maven -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.version>3.8.0</maven.compiler.version>
         <maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
        <maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
        <maven.war.plugin.version>3.1.0</maven.war.plugin.version>
         <maven.jacoco.version>0.8.5</maven.jacoco.version>
         <maven.sonar.plugin.version>3.7.0.1746</maven.sonar.plugin.version>
        <maven.javadoc.version>3.2.0</maven.javadoc.version>
        <maven-shade-plugin.version>2.3</maven-shade-plugin.version>

        <!-- spring -->
        <spring.boot.version>2.0.2.RELEASE</spring.boot.version>
        <spring.data.jpa.version>2.0.7.RELEASE</spring.data.jpa.version>
        <spring-cloud-config.version>2.0.0.RELEASE</spring-cloud-config.version>
        <h2.version>1.4.197</h2.version>
        <jackson.datatype.version>2.9.8</jackson.datatype.version>
        <kernel.keygenerator.bouncycastle.version>1.2.0-SNAPSHOT</kernel.keygenerator.bouncycastle.version>
        <swagger.version>2.9.2</swagger.version>
        <powermock.beta.version>2.0.7</powermock.beta.version>

        <kernel.core.version>1.2.0-SNAPSHOT</kernel.core.version>
        <kernel.biometrics.api.version>1.2.0-SNAPSHOT</kernel.biometrics.api.version>
        <kernel.crypto-jce.version>1.2.0-SNAPSHOT</kernel.crypto-jce.version>
        <kernel.auth.adaptor.version>1.2.0-SNAPSHOT</kernel.auth.adaptor.version>
        <kernel-dataaccess-hibernate.version>1.2.0-SNAPSHOT</kernel-dataaccess-hibernate.version>
        <kernel.logger.logback.version>1.2.0-SNAPSHOT</kernel.logger.logback.version>
        <spring.boot.co>2.0.2.RELEASE</spring.boot.co>
        <khazana.version>1.2.0-SNAPSHOT</khazana.version>
        <sonar.coverage.exclusions>**/constant/**,**/config/**,**/httpfilter/**,**/cache/**,**/dto/**,**/entity/**,**/model/**,**/exception/**,**/repository/**,**/security/**,**/*Config.java,**/*BootApplication.java,**/*VertxApplication.java,**/cbeffutil/**,**/*Utils.java,**/*Validator.java,**/*Helper.java,**/verticle/**,**/VidWriter.java/**,**/masterdata/utils/**,**/spi/**,**/core/http/**,"**/LocationServiceImpl.java","**/RegistrationCenterMachineServiceImpl.java","**/RegistrationCenterServiceImpl.java","**/pridgenerator/**","**/idgenerator/prid","**/proxy/**","**/cryptosignature/**"</sonar.coverage.exclusions>
        <sonar.cpd.exclusions>**/dto/**,**/entity/**,**/config/**</sonar.cpd.exclusions>
    </properties>

    <modules>
        <module>commons-packet-manager</module>
        <module>commons-packet-service</module>
    </modules>

<distributionManagement>
		<snapshotRepository>
                        <id>ossrh</id>
                        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository> 
                 <repository>
                        <id>ossrh</id>
                        <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                </repository> 
        </distributionManagement> 
        <build>
          
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.plugin.version}</version>
                    <configuration>
                        <skipTests>${skipTests}</skipTests>
                        <skip>false</skip>
                        <argLine>
                            ${argLine} --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED --illegal-access=permit
                        </argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${maven.jacoco.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>prepare-package</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven.jar.plugin.version}</version>
                    <configuration>
                        <archive>
                            <manifest>
                                <addClasspath>true</addClasspath>
                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            </manifest>
                            <manifestEntries>
                                <Project-Name>${project.name}</Project-Name>
                                <Project-Version>${project.version}</Project-Version>
                            </manifestEntries>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>${maven.war.plugin.version}</version>
                    <configuration>
                        <archive>
                            <manifest>
                                <addClasspath>true</addClasspath>
                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            </manifest>
                            <manifestEntries>
                                <Project-Name>${project.name}</Project-Name>
                                <Project-Version>${project.version}</Project-Version>
                            </manifestEntries>
                        </archive>
                    </configuration>
                </plugin>
           <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
            <plugin>
              <artifactId>maven-deploy-plugin</artifactId>
              <version>2.8.1</version>
              <executions>
                 <execution>
                    <id>default-deploy</id>
                    <phase>deploy</phase>
                    <goals>
                       <goal>deploy</goal>
                    </goals>
                 </execution>
              </executions>
           </plugin>
               <plugin>
                  <groupId>org.sonatype.plugins</groupId>
                  <artifactId>nexus-staging-maven-plugin</artifactId>
                  <version>1.6.7</version>
                  <extensions>true</extensions>
                  <executions>
                    <execution>
                      <id>default-deploy</id>
                      <phase>deploy</phase>
                      <goals>
                        <goal>deploy</goal>
                      </goals>
                    </execution>
                  </executions>
                  <configuration>
                        <serverId>ossrh</serverId>
                        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                        <autoReleaseAfterClose>false</autoReleaseAfterClose>
                  </configuration>
                </plugin> 

               <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-source-plugin</artifactId>
                  <inherited>true</inherited>
                  <version>2.2.1</version>
                  <executions>
                        <execution>
                          <id>attach-sources</id>
                          <goals>
                                <goal>jar-no-fork</goal>
                          </goals>
                        </execution>
                  </executions>
                </plugin>

              <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-javadoc-plugin</artifactId>
                  <version>3.2.0</version>
                  <executions>
                        <execution>
                          <id>attach-javadocs</id>
                          <goals>
                                <goal>jar</goal>
                          </goals>
                        </execution>
                  </executions>
                  <configuration>
                          <doclint>none</doclint>
                  </configuration>
                </plugin>
                <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-gpg-plugin</artifactId>
                  <version>1.5</version>
                  <executions>
                        <execution>
                          <id>sign-artifacts</id>
                          <phase>verify</phase>
                          <goals>
                                <goal>sign</goal>
                          </goals>
		          <configuration>
                		<gpgArguments>
                    			<arg>--pinentry-mode</arg>
                    			<arg>loopback</arg>
                		</gpgArguments>
            		 </configuration>
                        </execution>
                  </executions>
                </plugin>
		<plugin>
    			<groupId>pl.project13.maven</groupId>
			<artifactId>git-commit-id-plugin</artifactId>
			<version>3.0.1</version>
			<executions>
        			<execution>
			        	<id>get-the-git-infos</id>
					<goals>
						<goal>revision</goal>
            				</goals>
            				<phase>validate</phase>
 				</execution>
 			</executions>
 			<configuration>
				<generateGitPropertiesFile>true</generateGitPropertiesFile>
				<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
                    		<includeOnlyProperties>
                        		<includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
                        		<includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
                    		</includeOnlyProperties>
                    		<commitIdGenerationMode>full</commitIdGenerationMode>
 				<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
				<!-- <format>json</format> -->
			</configuration>
		</plugin>
          </plugins>
        </build>
		<scm>
                <connection>scm:git:git://github.com/mosip/commons.git</connection>
                <developerConnection>scm:git:ssh://github.com:mosip/commons.git</developerConnection>
                <url>https://github.com/mosip/commons</url>
                <tag>HEAD</tag>
        </scm>
		<licenses>
          <license>
                <name>MPL 2.0</name>
                <url>https://www.mozilla.org/en-US/MPL/2.0/</url>
          </license>
        </licenses>
		<developers>
                <developer>
                  <name>Mosip</name>
                  <email>mosip.emailnotifier@gmail.com</email>
                  <organization>io.mosip</organization>
                  <organizationUrl>https://github.com/mosip/commons</organizationUrl>
                </developer>
        </developers>
		<profiles>
            <profile>
                <id>sonar</id>
                <properties>
                    <sonar.sources>.</sonar.sources>
                    <sonar.inclusions>src/main/java/**,src/main/resources/**</sonar.inclusions>
                    <sonar.exclusions>${sonar.coverage.exclusions}</sonar.exclusions>
                    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
                </properties>
                <activation>
                    <activeByDefault>false</activeByDefault>
                </activation>
                <build>
                    <plugins>
                        <plugin>
                            <groupId>org.sonarsource.scanner.maven</groupId>
                            <artifactId>sonar-maven-plugin</artifactId>
                            <version>${maven.sonar.plugin.version}</version>
                            <executions>
                                <execution>
                                    <phase>verify</phase>
                                    <goals>
                                        <goal>sonar</goal>
                                    </goals>
                                </execution>
                            </executions>
                        </plugin>
                    </plugins>
                </build>
            </profile>
        </profiles>
	</project>
